# neurospatial

./: .gitignore  .pre-commit-config.yaml  404.html  ADDITIONAL_PACKAGES_SEARCH.md  ANIMATION_IMPLEMENTATION_PLAN.md  ANIMOVEMENT_ANALYSIS.md  ANIM_OPT_PLAN.md  ARCH_PLAN.md  ARCH_PLAN2.md  ASSEMBLY_DETECTION_PLAN.md  BASIS_PLAN.md  BASIS_TASKS.md  BEHAVIORAL_SEGMENTATION.md  BEHAV_PLAN.md  BEHAV_PLAN2.md  BEHAV_TASKS.md  BEHAV_TASKS2.md  BUZCODE_COMPARISON.md  CAPABILITIES_OVERVIEW.md  CAPABILITIES_SYNTHESIS.md  CHANGELOG.md  CIRCULAR_BASIS_PLAN.md  CIRCULAR_STATS_PLAN.md  CIRC_BASIS_TASKS.md  CIRC_STATS_TASKS.md  CLAUDE.md  COMPREHENSIVE_CODE_REVIEW.md  CONNECTED_COMPONENTS_INVESTIGATION_2.7.md  DIFFERENTIAL_GEOMETRY_COMPARISON.md  DIFFERENTIAL_OPERATOR_COMPARISON.md  DOMAIN_SPECIFIC_METRICS.md  ECOLOGY_TRAJECTORY_PACKAGES.md  ENVIRONMENT_OPS_PLAN.md  ENV_PLAN.md  EVENT_OVERLAY_FIX_PLAN.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_REVIEW.md  IMPLEMENTATION_SUMMARY.md  (+56 more)
.claude/: ADVANCED.md  API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  PATTERNS.md  PROFILING.md  QUICKSTART.md  TROUBLESHOOTING.md
api/: index.html
benchmark_datasets/: datasets.py
benchmarks/: BASELINE.md  __init__.py  bench_encoding_backends.py  bench_lazy_renderers.py  bench_napari.py  bench_skeleton_vectors.py  bench_video.py  bench_widget.py  utils.py
changelog/: index.html
contributing/: index.html
data/: README.md  load_bandit_data.py
dimensionality_support/: index.html
docs/: PERFORMANCE_PROFILING.md  SCRATCHPAD.md  SIMULATION_PLAN.md  TASKS.md  UX_IMPLEMENTATION_PLAN.md  UX_REVIEW_2025-11-01.md  animation_overlays.md  brandon_rhodes_review.md  changelog.md  code_review_2025-10-31.md  contributing.md  dimensionality_support.md  errors.md  glossary.md  index.md  performance_baseline.md  ratinabox_comparison.md  refactoring_plan.md  snippets.yml  sync_notebooks.py  validation-notes.md
examples/: 01_introduction_basics.ipynb  01_introduction_basics.py  02_layout_engines.ipynb  02_layout_engines.py  03_morphological_operations.ipynb  03_morphological_operations.py  04_regions_of_interest.ipynb  04_regions_of_interest.py  05_track_linearization.ipynb  05_track_linearization.py  06_composite_environments.ipynb  06_composite_environments.py  07_advanced_operations.ipynb  07_advanced_operations.py  08_complete_workflow.ipynb  08_spike_field_basics.ipynb  08_spike_field_basics.py  09_differential_operators.ipynb  09_differential_operators.py  09_spike_field_basics.ipynb  09_spike_field_basics.py  10_differential_operators.ipynb  10_differential_operators.py  10_signal_processing_primitives.ipynb  10_signal_processing_primitives.py  11_place_field_analysis.ipynb  11_place_field_analysis.py  11_signal_processing_primitives.ipynb  11_signal_processing_primitives.py  12_boundary_cell_analysis.ipynb  12_boundary_cell_analysis.py  12_place_field_analysis.ipynb  12_place_field_analysis.py  13_boundary_cell_analysis.ipynb  13_boundary_cell_analysis.py  13_trajectory_analysis.ipynb  13_trajectory_analysis.py  14_behavioral_segmentation.ipynb  14_behavioral_segmentation.py  14_trajectory_analysis.ipynb  (+39 more)
gen_ref_pages/: index.html
getting-started/: index.html
scripts/: analyze_trace.py  benchmark_napari_playback.py  diffusion_grid_bandwidth_check.py  isolate_freeze.py  perfmon_config.json  profile_detailed.py  profile_napari_animation.py  test_doc_snippets.py  test_napari_perfmon.py  test_napari_simple.py  visualize_mazes.py
search/: search_index.json
sync_notebooks/: index.html
tests/: README.md  conftest.py  test_alignment.py  test_api.py  test_apply_kernel.py  test_basis.py  test_behavioral.py  test_bin_size_required.py  test_calibration.py  test_check_fitted_error.py  test_composite_new_methods.py  test_connectivity.py  test_copy.py  test_deprecated_modules_removed.py  test_deterministic_kdtree.py  test_differential.py  test_direction_labels.py  test_directional_place_fields.py  test_distance.py  test_distance_field_extended.py  test_distance_new.py  test_distance_utilities.py  test_doc_snippets_helper.py  test_environment.py  test_environment_error_paths.py  test_io.py  (+48 more)
(+902 files in other folders)
